# ColorClassifier

./: Cargo.toml
.cargo/: config
src/: lib.rs  main.rs
src/app/: api.rs
src/core/: mod.rs  rec_color.rs
src/model/: mod.rs  yolov8.py
