[package]
name = "ColorClassifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.88.2"

[dependencies.pyo3]
version = "0.20.0"
features = ["auto-initialize"]

[target.x86_64-apple-darwin]
rustflags = ["-Clink-arg=-undefined", "-Clink-arg=dynamic_lookup", "-rpath=/opt/anaconda3/lib"]