[package]
name = "color_classifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
opencv = "0.88.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.pyo3]
version = "0.20.0"
features = ["auto-initialize"]
